# flight-risk

./: .dockerignore  .env.sample  .gitignore  .python-version  Dockerfile  Dockerfile.frontend  Dockerfile.presentation  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.presentation/: index.html  nginx.conf
api/: dependencies.py  main.py  schemas.py
api/routers/: explain.py  predict.py  weather.py
docs/: data_dict.md  training_data.md
flight_risk/: __init__.py  config.py  data.py  model.py  plots.py  predict.py
flight_risk/features/: __init__.py  build.py  congestion.py  lookup.py  route.py  temporal.py  weather.py
frontend/: app.py  requirements.txt
frontend/pages/: 1_Previsao.py  2_Explorar.py  3_Comparar.py  4_Sobre.py
notebooks/: baseline_binary_temporal_cliscia.ipynb  baseline_logistic_regression_cliscia.ipynb  baseline_multiclass_softmax_cliscia.ipynb  catboost_binary_temporal_cliscia.ipynb  catboost_multiclass_cliscia.ipynb  data_preparation.ipynb  data_preparation_felami10.ipynb  eda_cliscia.ipynb  luishbeck.ipynb  preprocessing_baseline.ipynb  shap_lightgbm_explainability_cliscia.ipynb  weather_data_feature_eng.ipynb
scripts/: run_api.py  run_features.py  run_predict.py  run_train.py
utils/: feature_engineering.py  fetch_data.py  train.py  weather_data.py
