[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flight-risk"
version = "0.1.0"
description = "Binary flight departure-delay prediction (LightGBM)."
requires-python = ">=3.12"
dependencies = [
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "numpy>=1.24",
    "pyarrow>=14.0",
    "joblib>=1.3",
    "holidays>=0.40",
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

# Console entrypoints — after `pip install -e .` you can run:
#   flight-risk-features
#   flight-risk-train
[project.scripts]
flight-risk-features = "scripts.run_features:main"
flight-risk-train    = "scripts.run_train:main"

[tool.setuptools.packages.find]
include = ["flight_risk*", "scripts*"]
